# ocel-2.0-event-log-analysis

./: LICENSE  README.md  pyproject.toml
ingest/: download_ocel_to_uc_volume.py  write_ocel_to_uc_schema.py
ocel2_ocpm_analyses.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
projects/: 1-OCEL_2.0_Logistics.ipynb
utils/: download_ocel_to_uc_volume.py  ocel2_uc_importer.py  write_ocel_to_uc_schema.py
